Goal Setting 1st Evaluation

--- a/mssqlcrud/MSSQLCRUD.csproj
+++ b/mssqlcrud/MSSQLCRUD.csproj
@@ -164,6 +164,10 @@
     <Content Include="Views\Home\Register.cshtml" />
     <Content Include="Views\Home\Login.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Home\ViewProfile.cshtml" />
+    <Content Include="Views\Home\Update.cshtml" />
+    <Content Include="Views\Home\employeeView.cshtml" />
+    <Content Include="Views\Home\employeeUpdateProfile.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
