goal setting 2022 march

--- a/mssqlcrud/MSSQLCRUD.csproj
+++ b/mssqlcrud/MSSQLCRUD.csproj
@@ -136,8 +136,13 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Images\add.png" />
+    <Content Include="Images\cody.png" />
+    <Content Include="Images\list-ingredients-xxl.png" />
+    <Content Include="Images\profile.png" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Content\animation.less" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
